2002-02-12  Lauris Kaplinski  <lauris@ximian.com>

	* background-properties-capplet.c (dialog_button_clicked_cb): Use
	GtkDialog instead of GnomeDialog

2002-02-06  Seth Nickell  <snickell@stanford.edu>

	* background-properties-capplet.c: (drag_motion_cb),
	(drag_leave_cb), (drag_data_received_cb),
	(change_background_type_toggles), (set_background_picture),
	(quit_cb), (main):
	* background-properties.glade:
	* background-properties.glade1:

	More fixes. Change layout in glade a bit, make DND work,
	fix widget previews.
	
2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* background-properties-capplet.c (setup_color_widgets): Kill warning
	(set_background_image_preview): Use g_file_test, use g_object_unref
	instead of gdk_pixbuf_unref
	(image_filename_clicked): Use g_signal_connect
	(dialog_button_clicked_cb): Use GtkDialog instead of GnomeDialog
	(realize_2_cb): Comment out to kill warning
	(realize_cb): Ditto
	(real_realize_cb): Ditto
	(string_to_background_type): Treat NULL string as default
	(string_to_orientation): Ditto

2002-01-13  Seth Nickell  <snickell@stanford.edu>

	reviewed by: <delete if not using a buddy>

	* .cvsignore:
	* Makefile.am:
	* background-properties-capplet.c: (set_picture_is_present),
	(string_to_background_type), (background_type_to_string),
	(orientation_to_string), (string_to_orientation),
	(peditor_string_to_orientation), (peditor_orientation_to_string),
	(update_preview_widgets), (get_legacy_settings),
	(setup_color_widgets), (peditor_value_changed),
	(set_background_image_preview), (file_selector_cb),
	(image_filename_clicked), (background_type_toggled),
	(change_background_type_toggles), (background_type_changed),
	(create_dialog), (idle_draw), (dialog_button_clicked_cb), (main):
	* background-properties.glade:
	* background-properties.glade1:
	* background-properties.xml:

2002-01-28  Richard Hestilow  <hestilow@ximian.com>

	* Link to libbackground.la.
	
2002-01-17  Jakub Steiner <jimmac@ximian.com>
